docs: minor bug fixes

--- a/apps/docs/src/content/once-ui/data/linearGauge.mdx
+++ b/apps/docs/src/content/once-ui/data/linearGauge.mdx
@@ -38,7 +38,7 @@ The `LinearGauge` component renders a horizontal tick-based gauge ideal for prog
   ]}
 />
 
-### Labels
+## Labels
 
 Show percentage labels at key intervals (0%, 25%, 50%, 75%, 100%).
 
@@ -47,7 +47,7 @@ Show percentage labels at key intervals (0%, 25%, 50%, 75%, 100%).
   marginBottom="24"
   previewPadding="l"
   fullscreenButton={true}
-  highlight="4"
+  highlight="5"
   preview={
     <LinearGauge
       width={400}
@@ -78,7 +78,7 @@ Provide an array of custom labels distributed evenly across the gauge.
   marginBottom="24"
   previewPadding="l"
   fullscreenButton={true}
-  highlight="4"
+  highlight="5"
   preview={
     <LinearGauge
       width={400}
@@ -102,7 +102,7 @@ Provide an array of custom labels distributed evenly across the gauge.
   ]}
 />
 
-### Reverse order
+## Reverse order
 
 Flip the order of labels and gauge by using `direction="column-reverse"`.
 
@@ -111,7 +111,7 @@ Flip the order of labels and gauge by using `direction="column-reverse"`.
   marginBottom="24"
   previewPadding="l"
   fullscreenButton={true}
-  highlight="5"
+  highlight="6"
   preview={
     <LinearGauge
       width={400}
@@ -137,7 +137,7 @@ Flip the order of labels and gauge by using `direction="column-reverse"`.
   ]}
 />
 
-### Health status
+## Hue
 
 Use the `hue` prop to represent different states with color gradients.
 
