--- a/apps/docs/src/content/once-ui/data/lineChart.mdx
+++ b/apps/docs/src/content/once-ui/data/lineChart.mdx
@@ -6,11 +6,13 @@ docs: "once-ui/data/lineChart.mdx"
 github: "modules/data/LineChart.tsx"
 navLabel: "LineChart"
 navIcon: "lineChart"
+navTag: "Update"
+navTagVariant: "indigo"
 ---
 
 The `LineChart` component provides a way to display line charts with interactive features, including hover effects, click events, and custom styling options. It supports various customization options including different chart types, color schemes, and interactive features.
 
-## Live morph animation
+## Live (morph animation)
 
 <LineChartStreamingExample />
 
