docs: update vibe coding section

--- a/apps/docs/src/content/vibe-coding.mdx
+++ b/apps/docs/src/content/vibe-coding.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Vibe Coding (MCP)"
-updatedAt: "2025-06-03"
+updatedAt: "2026-01-08"
 summary: "Once UI is an agent-first AI design system that empowers indie creators to build responsive, high-quality apps effortlessly."
 image: "/images/docs/vibe-coding-dark.jpg"
 navIcon: "code"
@@ -17,17 +17,6 @@ Once UI uses custom tokens and props to deliver an intuitive, compact developer 
 Compared to Tailwind + shadcn, Once UI yields up to **70% more compact** output, with **cleaner, more natural syntax**.
 
 That said, most AI models aren’t yet as fluent in Once UI as they are with Tailwind. To bridge that, we’ve created tooling and patterns to help agents learn fast — and guess better over time.
-
-## Local Repository
-
-If your repository includes Once UI components, you can guide AI with simple, natural prompts:
-
-<Row fillWidth vertical="end" gap="12">
-    <Avatar size="s" src="/images/avatar.jpg" marginBottom="20"/>
-    <Column fillWidth padding="20" marginY="20" background="surface" border="neutral-alpha-weak" borderStyle="dashed" radius="l"><Text>I want you to implement a feed view using the `@Grid` component. Use the `@Card` component for each feed item. The card should be column direction with an `@Avatar` in the header, a `@Text` containing the name, and another one for the date. The card should have a `@Media` for the image, and two `@Text` for the title and description.</Text></Column>
-</Row>
-
-As you build more with Once UI, AI models will learn your patterns and start suggesting better code, faster. The more you rely on real usage, the less they hallucinate.
 
 ## MCP Server
 
@@ -53,18 +42,18 @@ To configure it:
 3. Restart your IDE
 4. Run the following code:
 
-<Row fillWidth vertical="end" gap="12">
-  <Avatar size="s" src="/images/avatar.jpg" marginBottom="20"/>
-  <Row fillWidth padding="20" marginY="20" background="surface" border="neutral-alpha-weak" borderStyle="dashed" radius="l">get-library-docs /once-ui-system/mcp</Row>
+<Row fillWidth vertical="end" gap="12" paddingY="20">
+  <Avatar size="s" src="/images/avatar.jpg" marginBottom="8"/>
+  <Row fillWidth padding="20" background="surface" border="neutral-alpha-weak" borderStyle="dashed" radius="l">get-library-docs /once-ui-system/core</Row>
 </Row>
 
 This syncs the Once UI documentation with your local agent environment. To invoke the context, end your prompt with `use context7`.
 
 Example:
 
-<Row fillWidth vertical="end" gap="12">
-  <Avatar size="s" src="/images/avatar.jpg" marginBottom="20"/>
-  <Row fillWidth padding="20" marginY="20" background="surface" border="neutral-alpha-weak" borderStyle="dashed" radius="l">I want you to implement [...]. use context7</Row>
+<Row fillWidth vertical="end" gap="12" paddingY="20">
+  <Avatar size="s" src="/images/avatar.jpg" marginBottom="8"/>
+  <Row fillWidth padding="20" background="surface" border="neutral-alpha-weak" borderStyle="dashed" radius="l">I want you to implement [...]. use context7</Row>
 </Row>
 
-This lets your agent leverage the full Once UI system — even if it’s not installed locally.
+This lets your agent leverage the full Once UI system.
