docs: update config script

--- a/apps/docs/src/content/once-ui/config.mdx
+++ b/apps/docs/src/content/once-ui/config.mdx
@@ -21,7 +21,7 @@ Once UI manages app-level design configuration with the help of Providers. Here'
 import '@once-ui-system/core/css/tokens.css';
 
 import classNames from "classnames";
-import { Column } from "@once-ui-system/core";
+import { Column, ThemeInit } from "@once-ui-system/core";
 import { fonts } from "../resources/once-ui.config";
 
 interface RootLayoutProps {
@@ -43,50 +43,23 @@ export default async function RootLayout({ children }: RootLayoutProps) {
           )}
         >
           <head>
-            <script
-              dangerouslySetInnerHTML={{
-                __html: '
-                  (function() {
-                    try {
-                      const root = document.documentElement;
-                      
-                      const defaultTheme = 'system';
-                      root.setAttribute('data-neutral', 'gray');
-                      root.setAttribute('data-brand', 'blue');
-                      root.setAttribute('data-accent', 'indigo');
-                      root.setAttribute('data-solid', 'contrast');
-                      root.setAttribute('data-solid-style', 'flat');
-                      root.setAttribute('data-border', 'playful');
-                      root.setAttribute('data-surface', 'filled');
-                      root.setAttribute('data-transition', 'all');
-                      root.setAttribute('data-scaling', '100');
-                      root.setAttribute('data-viz-style', 'categorical');
-                      
-                      const resolveTheme = (themeValue) => {
-                        if (!themeValue || themeValue === 'system') {
-                          return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
-                        }
-                        return themeValue;
-                      };
-                      
-                      const theme = localStorage.getItem('data-theme');
-                      const resolvedTheme = resolveTheme(theme);
-                      root.setAttribute('data-theme', resolvedTheme);
-                      
-                      const styleKeys = ['neutral', 'brand', 'accent', 'solid', 'solid-style', 'viz-style', 'border', 'surface', 'transition', 'scaling'];
-                      styleKeys.forEach(key => {
-                        const value = localStorage.getItem('data-' + key);
-                        if (value) {
-                          root.setAttribute('data-' + key, value);
-                        }
-                      });
-                    } catch (e) {
-                      document.documentElement.setAttribute('data-theme', 'dark');
-                    }
-                  })();
-                ',
-              }}
-            />
+            <head>
+              <ThemeInit
+                config={{
+                  theme: "system",
+                  brand: "blue",
+                  accent: "indigo",
+                  neutral: "gray",
+                  solid: "contrast",
+                  'solid-style': "flat",
+                  border: "playful",
+                  surface: "filled",
+                  transition: "all",
+                  scaling: "100",
+                  'viz-style': "gradient",
+                }}
+              />
+            </head>
           </head>
           <LayoutProvider>
             <ThemeProvider>
